finish view Desktop -  Popular Movies

--- a/pages/mainContent.html
+++ b/pages/mainContent.html
@@ -23,10 +23,7 @@
         </nav>
     </header>
     <main>
-        <section class="section-filters">
-            <div>
-                <h2 class="title-section">Now playing movie</h2>
-            </div>
+        <section class="section-filters">            
             <div class="container-sort">
                 <div class="name">
                     <h2>Sort</h2>
@@ -103,6 +100,23 @@
                             <li><a href="#">Westerm</a></li>
                         </ul>                  
                 </div>
+                <hr>
+                <div class="container-certificacion">
+                    <h3>Certificacion</h3>
+                    <ul>
+                        <li><a href="#">NR</a></li>
+                        <li><a href="#">G</a></li>
+                        <li><a href="#">PG</a></li>
+                        <li><a href="#">PG-13</a></li>
+                        <li><a href="#">R</a></li>
+                        <li><a href="#">NC-17</a></li>
+                    </ul>
+                </div>
+
+            </div>
+            <br>
+            <div class="container-search">
+                <button class="btn-search">SEARCH</button>
             </div>
             
         </section>
@@ -114,7 +128,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -124,7 +139,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -133,7 +149,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -142,7 +159,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -151,7 +169,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -160,7 +179,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -169,7 +189,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -178,7 +199,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -187,7 +209,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -196,7 +219,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -205,7 +229,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -214,7 +239,8 @@
                 <div class="container-movie">
                     <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
                     <div class="descripcion-movie">
-                        <p>La guerra de las galaxias. Episodio IV: Una nueva esperanza</p>
+                        <p class="movie-title">Star Wars: The Rise of Skywalker </p>
+                        <p class="movie-date">Jan 20, 2020</p>
                     </div>
                     <div>
                         <button class="btn btn-black">View</button>
@@ -225,10 +251,44 @@
         </section>
     </main>
     <footer>
-        <div>
-            FOOTER
+        <div class="container-footer">
+            <div class="container-basic">
+                <h3>THE BASICS</h3>
+                <ul>
+                    <li><a href="#">About TMDb</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Support Forums</a></li>
+                    <li><a href="#">API</a></li>
+                    <li><a href="#">System Status</a></li>                    
+                </ul>
+            </div>
+            <div class="container-involved">
+                <h3>GET INVOLVED</h3>
+                <ul>
+                    <li><a href="#">Contribution Bible</a></li>
+                    <li><a href="#">3rd Party applications</a></li>
+                    <li><a href="#">Add new movie</a></li>
+                    <li><a href="#">Add new TV Show</a></li>                    
+                </ul>
+            </div>
+            <div class="container-community">
+                <h3>COMMUNITY</h3>
+                <ul>
+                    <li><a href="#">Guidelines</a></li>
+                    <li><a href="#">Discussions</a></li>
+                    <li><a href="#">Leaderboard</a></li>
+                    <li><a href="#">Twitter</a></li>                   
+                </ul>
+            </div>
+            <div class="container-legal">
+                <h3>Legal</h3>
+                <ul>
+                    <li><a href="#">Terms of use</a></li>
+                    <li><a href="#">API terms of use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
-
 </html>
