finished: layout mobile, desktop, tablet version

--- a/pages/mainContent.html
+++ b/pages/mainContent.html
@@ -14,11 +14,13 @@
     <header>
         <nav class="nav-mobile-version">
             <ul>
-                <li><a href=""><i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
-                <li><a href=""><i class="fas fa-bars" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fas fa-film"></i></a></li>
+                <li><a href="#"><i class="fas fa-tv"></i></a></li>
+                <li><a href="#"><i class="fas fa-user-friends"></i></a></li>
+                <li><a class="bars" href="#"><i class="fas fa-bars" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
-
+        
         <nav class="nav-desktop-version">
             <ul>
                 <li><a href="">Movies</a></li>
@@ -37,7 +39,7 @@
                     <h2>Sort</h2>
                     <span class="fa fa-chevron-right" aria-hidden="true"></span>
                 </div>
-                <div class="filter">
+                <div class="container-sort-result">
                     <h3>Sort Result By</h3>
                     <select>
                         <option value="">Release Date Descending</option>
@@ -54,7 +56,7 @@
                     <h2>Filters</h2>
                     <span class="fa fa-chevron-right" aria-hidden="true"></span>
                 </div>
-                <div class="filter">
+                <div class="container-show-me">
                     <h3>Show me</h3>
                     <div class="filters-movie">
                         <div>                            
@@ -134,7 +136,7 @@
             </div>
             <div class="container-populars">
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -144,7 +146,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -154,7 +156,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -164,7 +166,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -174,7 +176,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -184,7 +186,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -194,7 +196,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -204,7 +206,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -214,7 +216,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -224,7 +226,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -234,7 +236,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg"></div>
+                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -287,8 +289,107 @@
             </div>
         </div>
     </footer>
-    <div class="overlay">
-        
+    <div class="overlay show-div-overlay-mobile"> 
     </div>
+    <div class="filters-mobile show-div-sidebar-mobile">
+        <div class="container-profile">
+            <i class="fa fa-user-circle"></i>
+            <i class="fas fa-times"></i>
+        </div>
+        <div class="container-sort">
+            <div class="name">
+                <h2>Sort</h2>
+                <span class="fa fa-chevron-right" aria-hidden="true"></span>
+            </div>
+            <div class="container-sort-result">
+                <h3>Sort Result By</h3>
+                <select>
+                    <option value="">Release Date Descending</option>
+                    <option value="">Release Date Ascending</option>
+                    <option value="">Popularity Ascending</option>
+                    <option value="">Popularity Descending</option>
+                    <option value="">Popular</option>
+                </select>
+            </div>
+        </div>
+        <div class="container-filter">
+            <div class="name">
+                <h2>Filters</h2>
+                <span class="fa fa-chevron-right" aria-hidden="true"></span>
+            </div>
+            <br>
+            <div class="container-show-me">
+                <h3>Show me</h3>
+                <div class="filters-movie">
+                    <div>                            
+                        <input type="radio" value="1">
+                        <label>Everything</label>
+                    </div>
+                    <div>                            
+                        <input type="radio" value="2">
+                        <label>Movies I Haven't Seen</label>
+                    </div>
+                    <div>                            
+                        <input type="radio" value="3">
+                        <label>Movies I Haven Seen</label>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="realese-date">
+                <h3>Release Date</h3>
+                <div class="from"> 
+                    <label>from</label>
+                    <input type="date" class="input-date">
+                </div>
+                <div class="to">
+                    <label>to</label>
+                    <input type="date" class="input-date">
+                </div>
+            </div>
+            <hr>
+            <div class="genres-movie">
+                <h3>Genres</h3>                
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Adventure</a></li>
+                        <li><a href="#">Animation</a></li>
+                        <li><a href="#">Comedy</a></li>
+                        <li><a href="#">Crime</a></li>
+                        <li><a href="#">Documentary</a></li>
+                        <li><a href="#">Drama</a></li>
+                        <li><a href="#">Family</a></li>
+                        <li><a href="#">Fantasy</a></li>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Horror</a></li>
+                        <li><a href="#">Music</a></li>
+                        <li><a href="#">Mystery</a></li>
+                        <li><a href="#">Romance</a></li>
+                        <li><a href="#">Science Fiction</a></li>
+                        <li><a href="#">Tv Movie</a></li>
+                        <li><a href="#">Thriller</a></li>
+                        <li><a href="#">War</a></li>
+                        <li><a href="#">Westerm</a></li>
+                    </ul>                  
+            </div>
+            <hr>
+            <div class="container-certificacion">
+                <h3>Certificacion</h3>
+                <ul>
+                    <li><a href="#">NR</a></li>
+                    <li><a href="#">G</a></li>
+                    <li><a href="#">PG</a></li>
+                    <li><a href="#">PG-13</a></li>
+                    <li><a href="#">R</a></li>
+                    <li><a href="#">NC-17</a></li>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <div class="container-search">
+            <button class="btn-search">SEARCH</button>
+        </div>
+    </div>
+    <script src="../js/mobile/mainContent.js"></script>
 </body>
 </html>
