--- a/src/pages/Popular.html
+++ b/src/pages/Popular.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/mainContent.css" type="text/css">
-    <link rel="stylesheet" href="../css/mobile/mainContentMobile.css" type="text/css">
+    <link rel="stylesheet" href="../css/popular.css" type="text/css">
+    <link rel="stylesheet" href="../css/mobile/popularMobile.css" type="text/css">
     <script src="https://kit.fontawesome.com/05e1420fce.js" crossorigin="anonymous"></script>
-    <title>MovieAPP|Movies</title>
+    <title>Movies</title>
 </head>
-
 <body>
     <header>
         <nav class="nav-mobile-version">
@@ -136,7 +135,7 @@
             </div>
             <div class="container-populars">
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -146,7 +145,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -156,7 +155,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -166,7 +165,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -176,7 +175,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -186,7 +185,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -196,7 +195,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -206,7 +205,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -216,7 +215,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -226,7 +225,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -236,7 +235,7 @@
                     </div>
                 </div>
                 <div class="container-movie">
-                    <div class="container-img-movie"><img src="../img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
+                    <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
                         <p class="movie-date">Jan 20, 2020</p>
@@ -390,6 +389,5 @@
             <button class="btn-search">SEARCH</button>
         </div>
     </div>
-    <script src="../js/mobile/mainContent.js"></script>
 </body>
 </html>
