--- a/src/pages/Popular.html
+++ b/src/pages/Popular.html
@@ -134,7 +134,7 @@
                 <h2>Popular Movies</h2>
             </div>
             <div class="container-populars">
-                <div class="container-movie">
+                <!-- <div class="container-movie">
                     <div class="container-img-movie"><img src="../assets/img/ahT4ObS7XKedQkOSpGr1wQ97aKA.jpg" alt="Movie"></div>
                     <div class="descripcion-movie">
                         <p class="movie-title">Star Wars: The Rise of Skywalker </p>
@@ -243,7 +243,7 @@
                     <div>
                         <button class="btn btn-black">View</button>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </section>
