finished function "search sort by result" Desktop version

--- a/src/pages/Popular.html
+++ b/src/pages/Popular.html
@@ -40,12 +40,12 @@
                 </div>
                 <div class="container-sort-result">
                     <h3>Sort Result By</h3>
-                    <select>
-                        <option value="">Release Date Descending</option>
-                        <option value="">Release Date Ascending</option>
-                        <option value="">Popularity Ascending</option>
-                        <option value="">Popularity Descending</option>
-                        <option value="">Popular</option>
+                    <select >
+                        <option value="release_date.desc">Release Date Descending</option>
+                        <option value="release_date.asc">Release Date Ascending</option>
+                        <option value="popularity.asc">Popularity Ascending</option>
+                        <option value="popularity.desc">Popularity Descending</option>
+                        <option value="popular">Popular</option>
                     </select>
                 </div>
             </div>
@@ -59,15 +59,15 @@
                     <h3>Show me</h3>
                     <div class="filters-movie">
                         <div>                            
-                            <input type="radio" value="1">
+                            <input  type="radio" value="1" name="option-filter" checked>
                             <label>Everything</label>
                         </div>
                         <div>                            
-                            <input type="radio" value="2">
+                            <input  type="radio" value="2" name="option-filter">
                             <label>Movies I Haven't Seen</label>
                         </div>
-                        <div>                            
-                            <input type="radio" value="3">
+                        <div>                             
+                            <input type="radio" value="3" name="option-filter">
                             <label>Movies I Haven Seen</label>
                         </div>
                     </div>
@@ -302,12 +302,12 @@
             </div>
             <div class="container-sort-result">
                 <h3>Sort Result By</h3>
-                <select>
-                    <option value="">Release Date Descending</option>
-                    <option value="">Release Date Ascending</option>
-                    <option value="">Popularity Ascending</option>
-                    <option value="">Popularity Descending</option>
-                    <option value="">Popular</option>
+                <select >
+                    <option value="release_date.desc">Release Date Descending</option>
+                    <option value="release_date.asc">Release Date Ascending</option>
+                    <option value="popularity.asc">Popularity Ascending</option>
+                    <option value="popularity.desc">Popularity Descending</option>
+                    <option value="popular">Popular</option>
                 </select>
             </div>
         </div>
