--- a/src/pages/Popular.html
+++ b/src/pages/Popular.html
@@ -88,7 +88,7 @@
                 <div class="genres-movie">
                     <h3>Genres</h3>                
                         <ul>
-                            <li><a href="#">Action</a></li>
+                            <!-- <li><a href="#">Action</a></li>
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Animation</a></li>
                             <li><a href="#">Comedy</a></li>
@@ -106,19 +106,19 @@
                             <li><a href="#">Tv Movie</a></li>
                             <li><a href="#">Thriller</a></li>
                             <li><a href="#">War</a></li>
-                            <li><a href="#">Westerm</a></li>
+                            <li><a href="#">Westerm</a></li> -->
                         </ul>                  
                 </div>
                 <hr>
                 <div class="container-certificacion">
                     <h3>Certificacion</h3>
                     <ul>
-                        <li><a href="#">NR</a></li>
+                        <!-- <li><a href="#">NR</a></li>
                         <li><a href="#">G</a></li>
                         <li><a href="#">PG</a></li>
                         <li><a href="#">PG-13</a></li>
                         <li><a href="#">R</a></li>
-                        <li><a href="#">NC-17</a></li>
+                        <li><a href="#">NC-17</a></li> -->
                     </ul>
                 </div>
 
@@ -350,7 +350,7 @@
             <div class="genres-movie">
                 <h3>Genres</h3>                
                     <ul>
-                        <li><a href="#">Action</a></li>
+                        <!-- <li><a href="#">Action</a></li>
                         <li><a href="#">Adventure</a></li>
                         <li><a href="#">Animation</a></li>
                         <li><a href="#">Comedy</a></li>
@@ -368,8 +368,8 @@
                         <li><a href="#">Tv Movie</a></li>
                         <li><a href="#">Thriller</a></li>
                         <li><a href="#">War</a></li>
-                        <li><a href="#">Westerm</a></li>
-                    </ul>                  
+                        <li><a href="#">Westerm</a></li> -->
+                    </ul>                   
             </div>
             <hr>
             <div class="container-certificacion">
