--- a/src/pages/Popular.html
+++ b/src/pages/Popular.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/popular.css" type="text/css">
     <link rel="stylesheet" href="../css/mobile/popularMobile.css" type="text/css">
     <script src="https://kit.fontawesome.com/05e1420fce.js" crossorigin="anonymous"></script>
-    <title>Movies</title>
+    <title>Movies- Pages</title>
 </head>
 <body>
     <header>
