--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css" type="text/css">
     <script src="https://kit.fontawesome.com/05e1420fce.js" crossorigin="anonymous"></script>
-    <title>MovieAPP - Login</title>
+    <title>MovieAPP - Login Acces </title>
 </head>
 <body>
     <main>
